--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lời chúc từ Khả Vy nè</title>
+    <title>Chúc Mừng Năm Mới Bính Ngọ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,6 +16,7 @@
 <body>
     <!-- Confetti container -->
     <div id="confetti-container"></div>
+    <div class="gold-frame"></div>
 
     <!-- Pháo hoa -->
     <canvas id="fireworks"></canvas>
@@ -64,6 +65,5 @@
 
     <script src="script.js"></script>
 </body>
-
 
 </html>
